Updated Workflow Name and Description
Updated the name and purpose of the workflow. The name has been changed from "OCR Inspector Production" to "Build & Release". The comment indicating the purpose of the workflow has been updated from "Workflow to build and release OcrInspector for production" to "Workflow to build and release UiaXpathTester for production". The permissions for the workflow remain the same, with write access to contents.

--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -1,5 +1,5 @@
-# Workflow to build and release OcrInspector for production
-name: OCR Inspector Production
+# Workflow to build and release UiaXpathTester for production
+name: Build & Release
 
 # Permissions for the workflow
 permissions:
