--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -104,6 +104,7 @@ jobs:
     - name: Create Build Artifact
       shell: pwsh
       run: |
+        New-Item -Path "${{ env.artifactStagingDirectory }}" -ItemType Directory
         Compress-Archive `
             -Path ${{ env.binariesDirectory }}/publish/* `
             -DestinationPath ${{ env.artifactStagingDirectory }}/${{ env.projectName }}.${{ env.buildVersion }}-win-x64.zip 
